fix some overlapping css issues

--- a/src/css/Pad.scss
+++ b/src/css/Pad.scss
@@ -111,28 +111,13 @@
   }
 
   @media (min-width: 950px) {
-    .Sample {
-      width: 65%;
+    .PadLayer .level-left, .Sample {
+      width: 55%;
     }
   }
   @media (min-width: 1000px) {
-    .Sample {
-      width: 70%;
-    }
-  }
-  @media (min-width: 1050px) {
-    .Sample {
-      width: 75%;
-    }
-  }
-  @media (min-width: 1100px) {
-    .Sample {
-      width: 80%;
-    }
-  }
-  @media (min-width: 1150px) {
-    .Sample {
-      width: 85%;
+    .PadLayer .level-left, .Sample {
+      width: 60%;
     }
   }
 
